Fixes filters panel hidding on mobile after opening autocomplete filter.

--- a/src/views/admin/scss/_modals.scss
+++ b/src/views/admin/scss/_modals.scss
@@ -4,6 +4,11 @@
 
     @media screen and (max-width: 769px) {
         justify-content: flex-end;
+
+        .tainacan-modal-content {
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
+        }
     }
 }
 .tainacan-modal .animation-content {
